configured webpack with Express and created output file

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <h1>World</h1>
+  <!-- per the webpack config file, this is where the bundles will output from memory -->
+  <script src="bundle.js"></script>
 </body>
 </html>
