--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>World</h1>
+  <h1>Hello World</h1>
   <!-- per the webpack config file, this is where the bundles will output from memory -->
   <script src="bundle.js"></script>
 </body>
