--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
       <tbody id="users"></tbody>
     </table>
-    <!-- per the webpack config file, this is where the bundles will output from memory -->
-    <script src="bundle.js"></script>
+    <!-- per the webpack config file, this is where the bundles will output from memory
+    <script src="bundle.js"></script> -->
   </body>
 </html>
