--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <% if(htmlWebpackPlugin.options.trackJSToken) { %>
+
+      <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+      <script>
+        window.TrackJS && TrackJS.install({
+          token: '<%=htmlWebpackPlugin.options.trackJSToken%>'
+
+        });
+        </script>
+    <% } %>
   </head>
   <body>
     <h1>Users</h1>
